--- a/sass/style.scss
+++ b/sass/style.scss
@@ -116,6 +116,11 @@ body {
 
 .post-author {
   font-style: italic;
+
+  li {
+    display: inline-flex;
+    list-style-type: none;
+  }
 }
 
 .post-tags {
